Fix spacing copyright

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -52,6 +52,7 @@
 
 #copy{
 	opacity: 0.5;
+	display: inline;
 
 }
 
